--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,10 @@
         "symfony/form": "6.3.*",
         "symfony/framework-bundle": "6.3.*",
         "symfony/runtime": "6.3.*",
+        "symfony/security-csrf": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "6.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -77,7 +79,9 @@
         "symfony/css-selector": "6.3.*",
         "symfony/maker-bundle": "^1.51",
         "symfony/phpunit-bridge": "^6.3",
-        "symfony/var-dumper": "6.3.*"
+        "symfony/stopwatch": "6.3.*",
+        "symfony/var-dumper": "6.3.*",
+        "symfony/web-profiler-bundle": "6.3.*"
     },
     "repositories": [
         {
